grammar.js
    source_file: ($) => repeat(choice($.import_statement, $.statement)),

    identifier: ($) => /[A-Za-z_$][A-Za-z0-9_]*/,
    module_path: ($) => /[A-Za-z0-9_][A-Za-z0-9_\/\.\-:~]*/,

    integer: ($) => /[0-9][0-9_]*/,
    number: ($) => /[0-9][0-9_]*(\.[0-9_]+)?/,
    string: ($) =>
      seq(
        '"',
        repeat(choice($.string_content, $.escape_sequence, $.brace_escape, $.string_interpolation)),
        '"'
      ),
    string_content: ($) => token.immediate(choice(/[^"\\{}]+/, "}")),
    _attribute_string: ($) =>
      seq(
        '"',
        repeat(choice(alias($._attribute_string_content, $.string_content), $.escape_sequence, $.brace_escape)),
        '"'
      ),
    _attribute_raw_string: ($) =>
      choice(
        seq(
          token(prec(1, seq("`", /\r\n|\n|\r/))),
          repeat($._attribute_raw_string_line),
          "`"
        ),
        seq(
          "`",
          repeat(choice($.raw_string_content, $.brace_escape)),
          token.immediate("`")
        )
      ),
    rune: ($) => token(seq("'", repeat(choice(/[^'\\\n]/, seq("\\", /./))), "'")),
    boolean: ($) => choice("true", "false"),
    void: ($) => prec(-1, seq("(", ")")),

    import_statement: ($) =>
      seq(
        "use",
        field("path", $.module_path),
        optional(seq("as", field("alias", $.identifier)))
      ),

    expression_statement: ($) => $.expression,

    defer_statement: ($) =>
      seq(
        "defer",
        field("body", choice($.block, $.expression))
      ),

    variable_declaration: ($) =>
      prec(1, seq(
        choice("let", "mut"),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        "=",
        field("value", $.expression)
      )),

    function_declaration: ($) =>
      seq(
        optional(choice("private", "test")),
        "fn",
        optional("mut"),
        field("name", choice($.qualified_identifier, $.identifier, alias("mut", $.identifier))),
        optional(field("type_params", $.type_parameters)),
        field("parameters", $.parameter_list),
        optional(field("return_type", $.type)),
        field("body", $.block)
      ),

    extern_function: ($) =>
      seq(
        optional("private"),
        "extern",
        "fn",
        field("name", $.identifier),
        optional(field("type_params", $.type_parameters)),
        field("parameters", $.parameter_list),
        optional(field("return_type", $.type)),
        "=",
        field("binding", $.extern_binding)
      ),

    extern_binding: ($) =>
      choice(
        $.string,
        $.qualified_identifier,
        $.extern_binding_block
      ),

    extern_binding_block: ($) =>
      seq(
        "{",
        $.extern_binding_entry,
        repeat(seq(optional(","), $.extern_binding_entry)),
        optional(","),
        "}"
      ),

    extern_binding_entry: ($) =>
      seq(
        field("target", $.extern_binding_target),
        "=",
        field("binding", choice($.string, $.qualified_identifier))
      ),

    extern_binding_target: ($) => /[A-Za-z_][A-Za-z0-9_]*(\-[A-Za-z_][A-Za-z0-9_]*)*/,

    parameter_list: ($) =>
      seq("(", optional(sep1($.parameter, ",")), ")"),

    parameter: ($) =>
      seq(optional("mut"), field("name", $.identifier), optional(seq(":", field("type", $.type)))),

    type_parameters: ($) =>
      seq("<", sep1($.type_parameter, ","), ">"),

    type_parameter: ($) => $.identifier,

    struct_declaration: ($) =>
      seq(
        optional("private"),
        "struct",
        field("name", $.identifier),
        optional(field("type_params", $.type_parameters)),
        field("body", $.struct_body)
      ),

    struct_body: ($) =>
      seq("{", repeat(seq($.struct_field, optional(","))), "}"),

    struct_field: ($) =>
      seq(
        repeat(field("attribute", $.attribute)),
        field("name", $.identifier),
        ":",
        field("type", $.type)
      ),

    attribute: ($) =>
      seq(
        "#",
        choice(
          field("name", $.identifier),
          seq(
            field("namespace", $.identifier),
            alias(token.immediate(/[ \t]*:[ \t]*/), $.attribute_namespace_separator),
            field("name", alias(token.immediate(/(?:[A-Za-z_][A-Za-z0-9_]*|\$[A-Za-z_][A-Za-z0-9_]*)/), $.identifier))
          )
        ),
        optional(field("arguments", $.attribute_arguments))
      ),

    attribute_arguments: ($) =>
      seq(
        "(",
        optional(choice(
          seq(sep1($.attribute_named_argument, ","), optional(",")),
          seq(sep1($.attribute_value, ","), optional(","))
        )),
        ")"
      ),

    attribute_named_argument: ($) =>
      seq(field("name", $.identifier), ":", field("value", $.attribute_value)),

    attribute_value: ($) =>
      choice(
        alias($._attribute_string, $.string),
        alias($._attribute_raw_string, $.raw_string),
        seq(optional("-"), $.integer),
        $.boolean,
        $.identifier,
        $.attribute_list
      ),

    attribute_list: ($) =>
      seq("[", optional(seq(sep1($.attribute_value, ","), optional(","))), "]"),

    enum_declaration: ($) =>
      seq(
        optional("private"),
        "enum",
        field("name", $.identifier),
        "{",
        optional(sep1($.enum_variant, ",")),
        optional(","),
        "}"
      ),

    enum_variant: ($) =>
      seq(field("name", $.identifier), optional(seq("=", field("value", $.expression)))),

    impl_block: ($) =>
      seq(
        "impl",
        field("target", choice($.qualified_identifier, $.identifier)),
        optional(seq("for", field("for_type", $.identifier))),
        optional(seq("as", field("receiver", $.identifier))),
        field("body", $.impl_body)
      ),

    impl_body: ($) => seq("{", repeat($.function_declaration), "}"),

    block: ($) => seq("{", repeat($.statement), "}"),

    assignment_expression: ($) =>
      choice(
        $.not_expression,
        prec.right(
          PREC.assign,
          seq($.range_expression, choice("=", "=+", "=-"), $.assignment_expression)
        ),
        $.range_expression
      ),

    // `not` is intentionally broad in Ard: it consumes a complete expression
    // rather than binding like arithmetic unary operators.
    not_expression: ($) =>
      prec.right(seq("not", $.assignment_expression)),

    range_expression: ($) =>
      choice(
        prec.left(PREC.range, seq($.or_expression, "..", $.or_expression)),
        $.or_expression
      ),

    or_expression: ($) =>
      choice(
        prec.left(PREC.or, seq($.and_expression, "or", $.or_expression)),
        $.and_expression
      ),

    and_expression: ($) =>
      choice(
        prec.left(PREC.and, seq($.comparison_expression, "and", $.and_expression)),
        $.comparison_expression
      ),

    comparison_expression: ($) =>
      choice(
        prec.left(
          PREC.compare,
          seq(
            $.additive_expression,
            choice("<", "<=", ">", ">=", "==", "!="),
            $.additive_expression
          )
        ),
        $.additive_expression
      ),

    additive_expression: ($) =>
      choice(
        prec.left(PREC.add, seq($.multiplicative_expression, choice("+", "-"), $.additive_expression)),
        $.multiplicative_expression
      ),

    multiplicative_expression: ($) =>
      choice(
        prec.left(PREC.multiply, seq($.unary_expression, choice("*", "/", "%"), $.multiplicative_expression)),
        $.unary_expression
      ),

    unary_expression: ($) =>
      choice(
        prec(PREC.unary, seq(choice("-", "mut"), $.unary_expression)),
        $.try_expression,
        $.postfix_expression,
        $.primary_expression
      ),

    postfix_expression: ($) =>
      choice(
        prec.left(PREC.call, seq($.primary_expression, $.postfix)),
        prec.left(PREC.call, seq($.postfix_expression, $.postfix))
      ),

    postfix: ($) =>
      choice(
        prec(PREC.call, $.argument_list),
        $.generic_suffix,
        $.dereference_operator,
        prec.right(seq(".", $.identifier, $.argument_list)),
        seq(".", $.identifier)
      ),

    dereference_operator: ($) => token(".@"),

    // Calls may use horizontal spacing before `(`, but a newline terminates the
    // expression in the compiler parser. Keeping the opener immediate prevents
    // Tree-sitter from joining two source statements into one postfix chain.
    // Alias the combined token back to `(` so highlight and bracket queries
    // capture call openers just like every other parenthesis.
    argument_list: ($) =>
      seq(
        alias(token.immediate(prec(1, /[ \t]*\(/)), "("),
        optional(sep1($.argument, ",")),
        ")"
      ),

    primary_expression: ($) =>
      choice(
        $.number,
        $.string,
        $.raw_string,
        $.rune,
        $.boolean,
        $.void,
        $.self_expression,
        $.unsafe_block,
        $.identifier,
        $.qualified_identifier,
        $.list_literal,
        $.map_literal,
        $.struct_literal,
        $.block,
        $.parenthesized_expression,
        $.anonymous_function,
        $.match_expression,
        $.select_expression
      ),

    parenthesized_expression: ($) => prec(-1, seq("(", $.expression, ")")),

    self_expression: ($) => "self",
    qualified_identifier: ($) =>
      prec.left(seq($.identifier, repeat1(seq("::", $.identifier)))),

    result_type: ($) =>
      prec.right(PREC.type_result, seq($._type_primary, "!", $.type)),

    nullable_type: ($) => prec.right(seq($._type_primary, optional("?"))),

    _type_primary: ($) =>
      choice(
        $.primitive_type,
        $.mutable_type,
        $.parenthesized_type,
        $.function_type,
        $.fixed_array_type,
        $.list_type,
        $.map_type,
        $.generic_type,
        $.qualified_identifier,
        $.identifier
      ),

    primitive_type: ($) => choice("Int", "Float", "Str", "Bool", "Void"),

    mutable_type: ($) => seq("mut", field("inner", $.type)),

    parenthesized_type: ($) => seq("(", $.type, ")"),

    fixed_array_type: ($) => seq("[", field("element", $.type), ";", field("length", $.integer), "]"),

    function_type: ($) =>
      seq("fn", "(", optional($._function_type_parameters), ")", field("return", $.type)),

    _function_type_parameters: ($) =>
      seq(
        repeat(seq(field("parameter", $.type), ",")),
        choice(field("parameter", $.type), field("variadic", $.variadic_type))
      ),

    variadic_type: ($) => seq("...", field("element", $.type)),
  },
});
