test/corpus/minimal.txt
==================
Basics
==================
use ard/fs as fs
fn greet(person: Str) Str {}
struct Person { name: Str, age: Int }
enum Color { Red, Green }
---

(source_file
  (import_statement
    path: (module_path)
    alias: (identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (nullable_type
          (primitive_type))))
    return_type: (nullable_type
      (primitive_type))
    body: (block))
  (struct_declaration
    name: (identifier)
    body: (struct_body
      (struct_field
        name: (identifier)
        type: (nullable_type
          (primitive_type)))
      (struct_field
        name: (identifier)
        type: (nullable_type
          (primitive_type)))))
  (enum_declaration
    name: (identifier)
    (enum_variant
      name: (identifier))
    (enum_variant
      name: (identifier))))

==================
Generic struct declaration
==================
struct State<$T> { handle: StateHandle }
---

(source_file
  (struct_declaration
    name: (identifier)
    type_params: (type_parameters
      (type_parameter
        (identifier)))
    body: (struct_body
      (struct_field
        name: (identifier)
        type: (nullable_type
          (identifier))))))

==================
Impl self alias
==================
impl Person as p {
  fn age() Int {
    self.age
  }
}

impl Display for Person as person {
  fn to_str() Str {
    person.name
  }
}
---

(source_file
  (impl_block
    (identifier)
    (identifier)
    (impl_body
      (function_declaration
        (identifier)
        (parameter_list)
        (nullable_type
          (primitive_type))
        (block
          (expression_statement
            (assignment_expression
              (range_expression
                (or_expression
                  (and_expression
                    (comparison_expression
                      (additive_expression
                        (multiplicative_expression
                          (unary_expression
                            (postfix_expression
                              (primary_expression
                                (self_expression))
                              (postfix
                                (identifier))))))))))))))))
  (impl_block
    (identifier)
    (identifier)
    (identifier)
    (impl_body
      (function_declaration
        (identifier)
        (parameter_list)
        (nullable_type
          (primitive_type))
        (block
          (expression_statement
            (assignment_expression
              (range_expression
                (or_expression
                  (and_expression
                    (comparison_expression
                      (additive_expression
                        (multiplicative_expression
                          (unary_expression
                            (postfix_expression
                              (primary_expression
                                (identifier))
                              (postfix
                                (identifier)))))))))))))))))

==================
Mutable reference type
==================
struct Context {
  tree: mut Tree,
}
---

(source_file
  (struct_declaration
    name: (identifier)
    body: (struct_body
      (struct_field
        name: (identifier)
        type: (nullable_type
          (mutable_type
            inner: (nullable_type
              (identifier))))))))

==================
Rune literals
==================
let slash = '/'
let newline = '\n'
let quote = '\''
---

(source_file
  (variable_declaration
    (identifier)
    (assignment_expression
      (range_expression
        (or_expression
          (and_expression
            (comparison_expression
              (additive_expression
                (multiplicative_expression
                  (unary_expression
                    (primary_expression
                      (rune)))))))))))
  (variable_declaration
    (identifier)
    (assignment_expression
      (range_expression
        (or_expression
          (and_expression
            (comparison_expression
              (additive_expression
                (multiplicative_expression
                  (unary_expression
                    (primary_expression
                      (rune)))))))))))
  (variable_declaration
    (identifier)
    (assignment_expression
      (range_expression
        (or_expression
          (and_expression
            (comparison_expression
              (additive_expression
                (multiplicative_expression
                  (unary_expression
                    (primary_expression
                      (rune))))))))))))

==================
Not equal expression
==================
1 != 2
---

(source_file
  (expression_statement
    (assignment_expression
      (range_expression
        (or_expression
          (and_expression
            (comparison_expression
              (additive_expression
                (multiplicative_expression
                  (unary_expression
                    (primary_expression
                      (number)))))
              (additive_expression
                (multiplicative_expression
                  (unary_expression
                    (primary_expression
                      (number))))))))))))

==================
Direct Go imports and extern bindings
==================
use go:math
use go:git.sr.ht/~rockorager/vaxis as vaxis
extern fn floor(value: Float) Float = math::Floor
extern fn close(file: mut os::File) Void!Str = {
  go = os::File::Close
  wasm-js = "close"
}
---

(source_file
  (import_statement
    (module_path))
  (import_statement
    (module_path)
    (identifier))
  (extern_function
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (nullable_type
          (primitive_type))))
    (nullable_type
      (primitive_type))
    (extern_binding
      (qualified_identifier
        (identifier)
        (identifier))))
  (extern_function
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (nullable_type
          (mutable_type
            (nullable_type
              (qualified_identifier
                (identifier)
                (identifier)))))))
    (result_type
      (primitive_type)
      (nullable_type
        (primitive_type)))
    (extern_binding
      (extern_binding_block
        (extern_binding_entry
          (extern_binding_target)
          (qualified_identifier
            (identifier)
            (identifier)
            (identifier)))
        (extern_binding_entry
          (extern_binding_target)
          (string
            (string_content)))))))

==================
Grouped mutable result type
==================
use go:os
extern fn create_temp(dir: Str, pattern: Str) (mut os::File)!Str = os::CreateTemp
---

(source_file
  (import_statement
    (module_path))
  (extern_function
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (nullable_type
          (primitive_type)))
      (parameter
        (identifier)
        (nullable_type
          (primitive_type))))
    (result_type
      (parenthesized_type
        (nullable_type
          (mutable_type
            (nullable_type
              (qualified_identifier
                (identifier)
                (identifier))))))
      (nullable_type
        (primitive_type)))
    (extern_binding
      (qualified_identifier
        (identifier)
        (identifier)))))

==================
Defer statements
==================
fn main() {
  defer cleanup()
  defer {
    cleanup()
  }
}
---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (defer_statement
        body: (assignment_expression
          (range_expression
            (or_expression
              (and_expression
                (comparison_expression
                  (additive_expression
                    (multiplicative_expression
                      (unary_expression
                        (postfix_expression
                          (primary_expression
                            (identifier))
                          (postfix
                            (argument_list))))))))))))
      (defer_statement
        body: (block
          (expression_statement
            (assignment_expression
              (range_expression
                (or_expression
                  (and_expression
                    (comparison_expression
                      (additive_expression
                        (multiplicative_expression
                          (unary_expression
                            (postfix_expression
                              (primary_expression
                                (identifier))
                              (postfix
                                (argument_list)))))))))))))))))

==================
Fixed array type
==================
fn digest(bytes: [Byte; 32]) {}
---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (nullable_type
          (fixed_array_type
            element: (nullable_type
              (identifier))
            length: (integer)))))
    body: (block)))

==================
Mut keyword method names
==================
impl Value {
  fn mut() {}
  fn mut mut() {}
  fn deref() {}
}
---

(source_file
  (impl_block
    target: (identifier)
    body: (impl_body
      (function_declaration
        name: (identifier)
        parameters: (parameter_list)
        body: (block))
      (function_declaration
        name: (identifier)
        parameters: (parameter_list)
        body: (block))
      (function_declaration
        name: (identifier)
        parameters: (parameter_list)
        body: (block)))))
